Tue Jan 28 15:27:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c: rlimit is only available on Linux.
	  At least r44712 breaks FreeBSD.
	  [ruby-core:60113] [Bug #9454]

Tue Jan 28 15:17:59 2014  Zachary Scott  <e@zzak.io>

	* lib/set.rb: [DOC] Add examples for Set#intersect? and Set#disjoint?
	  Patch by xavier nayrac [Bug #9331] [ci skip]

Tue Jan 28 15:12:22 2014  Zachary Scott  <e@zzak.io>

	* ext/zlib/zlib.c (rb_zlib_adler32): [DOC] Add example for adler32
	  Patch by Vajrasky Kok [Bug #9307] [ci skip]

Tue Jan 28 08:56:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (iseq_build_from_ary_body): Use :blockptr instead of :block
	  as hash key when loading serialized instruction sequences from arrays.
	  [Bug #9455] [ruby-core:60146]

Mon Jan 27 21:52:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c: get current main thread stack size, which may
	  be expanded than allocated size at initialization, by rlimit().
	  [ruby-core:60113] [Bug #9454]

Sat Jan 25 22:17:02 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* README.ja.md, README.md: update the controller address of
	  mailing lists.

Sat Jan 25 14:50:42 2014  Eric Wong  <normalperson@yhbt.net>

	* process.c (send_child_error): retry write on EINTR to fix
	  occasional Errno::EINTR from Process.spawn.

	* process.c (recv_child_error): retry read on EINTR to fix
	  occasional Errno::EINTR from Process.spawn.

Sat Jan 25 14:21:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): result of assignment should be
	  its rhs instead of returned value from a method.
	  [ruby-core:60071] [Bug #9448]

Sat Jan 25 11:16:19 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_extract_keywords): treat nil keyword_hash same as 0,
	  for the case rb_scan_args returns nil if no keyword hash.

Fri Jan 24 15:13:20 2014  Zachary Scott  <e@zzak.io>

	* lib/racc/rdoc/grammar.en.rdoc: [DOC] Correct grammar and typos